packages/dartcv/src/dnn/dnn.h

CvStatus* cv_dnn_AsyncArray_new(AsyncArray* rval);
CvStatus* cv_dnn_AsyncArray_get(AsyncArray async_out, Mat out);
CvStatus* cv_dnn_Net_forwardAsync(Net net, const char* outputName, AsyncArray* rval);
void cv_dnn_AsyncArray_close(AsyncArrayPtr a);
CvStatus* cv_dnn_NMSBoxes(
    VecRect bboxes,
    VecF32 scores,
    float score_threshold,
    float nms_threshold,
    CVD_OUT VecI32* out_indices,
    CvCallback_0 callback
);
CvStatus* cv_dnn_NMSBoxes_1(
    VecRect bboxes,
    VecF32 scores,
    float score_threshold,
    float nms_threshold,
    CVD_OUT VecI32* indices,
    float eta,
    int top_k,
    CvCallback_0 callback
);
// Net
CvStatus* cv_dnn_Net_create(CVD_OUT Net* rval);
void cv_dnn_Net_close(NetPtr net);
bool cv_dnn_Net_empty(Net net);
CvStatus* cv_dnn_Net_dump(Net net, CVD_OUT char** rval);
CvStatus* cv_dnn_Net_forward(
    Net net, const char* outputName, CVD_OUT Mat* rval, CvCallback_0 callback
);
CvStatus* cv_dnn_Net_forwardLayers(
    Net net, CVD_OUT VecMat* outputBlobs, VecVecChar outBlobNames, CvCallback_0 callback
);
CvStatus* cv_dnn_Layer_inputNameToIndex(Layer layer, const char* name, CVD_OUT int* rval);
CvStatus* cv_dnn_Layer_outputNameToIndex(Layer layer, const char* name, CVD_OUT int* rval);
CvStatus* cv_dnn_Layer_getName(Layer layer, CVD_OUT char** rval);
CvStatus* cv_dnn_Layer_getType(Layer layer, CVD_OUT char** rval);
void cv_dnn_Layer_close(LayerPtr layer);