packages/dartcv/lib/src/g/dnn.g.dart

// coverage:ignore-file
// opencv_dart - OpenCV bindings for Dart language
//    some c wrappers were from gocv: https://github.com/hybridgroup/gocv
//    License: Apache-2.0 https://github.com/hybridgroup/gocv/blob/release/LICENSE.txt
// Author: Rainyl
// License: Apache-2.0
// Date: 2024/01/28

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;
import 'package:dartcv4/src/g/types.g.dart' as imp1;

/// Native bindings for OpenCV - Dnn
///
class CvNativeDnn {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  CvNativeDnn(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  CvNativeDnn.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void cv_dnn_AsyncArray_close(
    AsyncArrayPtr a,
  ) {
    return _cv_dnn_AsyncArray_close(
      a,
    );
  }

  late final _cv_dnn_AsyncArray_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(AsyncArrayPtr)>>(
          'cv_dnn_AsyncArray_close');
  late final _cv_dnn_AsyncArray_close =
      _cv_dnn_AsyncArray_closePtr.asFunction<void Function(AsyncArrayPtr)>();

  ffi.Pointer<CvStatus> cv_dnn_AsyncArray_get(
    AsyncArray async_out,
    Mat out,
  ) {
    return _cv_dnn_AsyncArray_get(
      async_out,
      out,
    );
  }

  late final _cv_dnn_AsyncArray_getPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(AsyncArray, Mat)>>(
      'cv_dnn_AsyncArray_get');
  late final _cv_dnn_AsyncArray_get = _cv_dnn_AsyncArray_getPtr
      .asFunction<ffi.Pointer<CvStatus> Function(AsyncArray, Mat)>();

  ffi.Pointer<CvStatus> cv_dnn_AsyncArray_new(
    ffi.Pointer<AsyncArray> rval,
  ) {
    return _cv_dnn_AsyncArray_new(
      rval,
    );
  }

  late final _cv_dnn_AsyncArray_newPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<AsyncArray>)>>('cv_dnn_AsyncArray_new');
  late final _cv_dnn_AsyncArray_new = _cv_dnn_AsyncArray_newPtr
      .asFunction<ffi.Pointer<CvStatus> Function(ffi.Pointer<AsyncArray>)>();

  void cv_dnn_Layer_close(
    LayerPtr layer,
  ) {
    return _cv_dnn_Layer_close(
      layer,
    );
  }

  late final _cv_dnn_Layer_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(LayerPtr)>>(
          'cv_dnn_Layer_close');
  late final _cv_dnn_Layer_close =
      _cv_dnn_Layer_closePtr.asFunction<void Function(LayerPtr)>();

  ffi.Pointer<CvStatus> cv_dnn_Layer_getName(
    Layer layer,
    ffi.Pointer<ffi.Pointer<ffi.Char>> rval,
  ) {
    return _cv_dnn_Layer_getName(
      layer,
      rval,
    );
  }

  late final _cv_dnn_Layer_getNamePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Layer,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('cv_dnn_Layer_getName');
  late final _cv_dnn_Layer_getName = _cv_dnn_Layer_getNamePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Layer, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  ffi.Pointer<CvStatus> cv_dnn_Layer_getType(
    Layer layer,
    ffi.Pointer<ffi.Pointer<ffi.Char>> rval,
  ) {
    return _cv_dnn_Layer_getType(
      layer,
      rval,
    );
  }

  late final _cv_dnn_Layer_getTypePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Layer,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('cv_dnn_Layer_getType');
  late final _cv_dnn_Layer_getType = _cv_dnn_Layer_getTypePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Layer, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  ffi.Pointer<CvStatus> cv_dnn_Layer_inputNameToIndex(
    Layer layer,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Int> rval,
  ) {
    return _cv_dnn_Layer_inputNameToIndex(
      layer,
      name,
      rval,
    );
  }

  late final _cv_dnn_Layer_inputNameToIndexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Layer, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>)>>('cv_dnn_Layer_inputNameToIndex');
  late final _cv_dnn_Layer_inputNameToIndex =
      _cv_dnn_Layer_inputNameToIndexPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Layer, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Int>)>();

  ffi.Pointer<CvStatus> cv_dnn_Layer_outputNameToIndex(
    Layer layer,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Int> rval,
  ) {
    return _cv_dnn_Layer_outputNameToIndex(
      layer,
      name,
      rval,
    );
  }

  late final _cv_dnn_Layer_outputNameToIndexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Layer, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>)>>('cv_dnn_Layer_outputNameToIndex');
  late final _cv_dnn_Layer_outputNameToIndex =
      _cv_dnn_Layer_outputNameToIndexPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Layer, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Int>)>();

  ffi.Pointer<CvStatus> cv_dnn_NMSBoxes(
    VecRect bboxes,
    VecF32 scores,
    double score_threshold,
    double nms_threshold,
    ffi.Pointer<VecI32> indices,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_NMSBoxes(
      bboxes,
      scores,
      score_threshold,
      nms_threshold,
      indices,
      callback,
    );
  }

  late final _cv_dnn_NMSBoxesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecRect, VecF32, ffi.Float, ffi.Float,
              ffi.Pointer<VecI32>, imp1.CvCallback_0)>>('cv_dnn_NMSBoxes');
  late final _cv_dnn_NMSBoxes = _cv_dnn_NMSBoxesPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecRect, VecF32, double, double,
          ffi.Pointer<VecI32>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_NMSBoxes_1(
    VecRect bboxes,
    VecF32 scores,
    double score_threshold,
    double nms_threshold,
    ffi.Pointer<VecI32> indices,
    double eta,
    int top_k,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_NMSBoxes_1(
      bboxes,
      scores,
      score_threshold,
      nms_threshold,
      indices,
      eta,
      top_k,
      callback,
    );
  }

  late final _cv_dnn_NMSBoxes_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecRect,
              VecF32,
              ffi.Float,
              ffi.Float,
              ffi.Pointer<VecI32>,
              ffi.Float,
              ffi.Int,
              imp1.CvCallback_0)>>('cv_dnn_NMSBoxes_1');
  late final _cv_dnn_NMSBoxes_1 = _cv_dnn_NMSBoxes_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(VecRect, VecF32, double, double,
          ffi.Pointer<VecI32>, double, int, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_blobFromImage(
    Mat image,
    Mat blob,
    double scalefactor,
    CvSize size,
    Scalar mean,
    bool swapRB,
    bool crop,
    int ddepth,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_blobFromImage(
      image,
      blob,
      scalefactor,
      size,
      mean,
      swapRB,
      crop,
      ddepth,
      callback,
    );
  }

  late final _cv_dnn_Net_blobFromImagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              Mat,
              ffi.Double,
              CvSize,
              Scalar,
              ffi.Bool,
              ffi.Bool,
              ffi.Int,
              imp1.CvCallback_0)>>('cv_dnn_Net_blobFromImage');
  late final _cv_dnn_Net_blobFromImage =
      _cv_dnn_Net_blobFromImagePtr.asFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, double, CvSize, Scalar, bool,
              bool, int, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_blobFromImages(
    VecMat images,
    Mat blob,
    double scalefactor,
    CvSize size,
    Scalar mean,
    bool swapRB,
    bool crop,
    int ddepth,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_blobFromImages(
      images,
      blob,
      scalefactor,
      size,
      mean,
      swapRB,
      crop,
      ddepth,
      callback,
    );
  }

  late final _cv_dnn_Net_blobFromImagesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecMat,
              Mat,
              ffi.Double,
              CvSize,
              Scalar,
              ffi.Bool,
              ffi.Bool,
              ffi.Int,
              imp1.CvCallback_0)>>('cv_dnn_Net_blobFromImages');
  late final _cv_dnn_Net_blobFromImages =
      _cv_dnn_Net_blobFromImagesPtr.asFunction<
          ffi.Pointer<CvStatus> Function(VecMat, Mat, double, CvSize, Scalar,
              bool, bool, int, imp1.CvCallback_0)>();

  void cv_dnn_Net_close(
    NetPtr net,
  ) {
    return _cv_dnn_Net_close(
      net,
    );
  }

  late final _cv_dnn_Net_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(NetPtr)>>(
          'cv_dnn_Net_close');
  late final _cv_dnn_Net_close =
      _cv_dnn_Net_closePtr.asFunction<void Function(NetPtr)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_create(
    ffi.Pointer<Net> rval,
  ) {
    return _cv_dnn_Net_create(
      rval,
    );
  }

  late final _cv_dnn_Net_createPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(ffi.Pointer<Net>)>>(
      'cv_dnn_Net_create');
  late final _cv_dnn_Net_create = _cv_dnn_Net_createPtr
      .asFunction<ffi.Pointer<CvStatus> Function(ffi.Pointer<Net>)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_dump(
    Net net,
    ffi.Pointer<ffi.Pointer<ffi.Char>> rval,
  ) {
    return _cv_dnn_Net_dump(
      net,
      rval,
    );
  }

  late final _cv_dnn_Net_dumpPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Net, ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('cv_dnn_Net_dump');
  late final _cv_dnn_Net_dump = _cv_dnn_Net_dumpPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Net, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  bool cv_dnn_Net_empty(
    Net net,
  ) {
    return _cv_dnn_Net_empty(
      net,
    );
  }

  late final _cv_dnn_Net_emptyPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(Net)>>('cv_dnn_Net_empty');
  late final _cv_dnn_Net_empty =
      _cv_dnn_Net_emptyPtr.asFunction<bool Function(Net)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_forward(
    Net net,
    ffi.Pointer<ffi.Char> outputName,
    Mat rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_forward(
      net,
      outputName,
      rval,
      callback,
    );
  }

  late final _cv_dnn_Net_forwardPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Net, ffi.Pointer<ffi.Char>, Mat,
              imp1.CvCallback_0)>>('cv_dnn_Net_forward');
  late final _cv_dnn_Net_forward = _cv_dnn_Net_forwardPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Net, ffi.Pointer<ffi.Char>, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_forwardAsync(
    Net net,
    ffi.Pointer<ffi.Char> outputName,
    ffi.Pointer<AsyncArray> rval,
  ) {
    return _cv_dnn_Net_forwardAsync(
      net,
      outputName,
      rval,
    );
  }

  late final _cv_dnn_Net_forwardAsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Net, ffi.Pointer<ffi.Char>,
              ffi.Pointer<AsyncArray>)>>('cv_dnn_Net_forwardAsync');
  late final _cv_dnn_Net_forwardAsync = _cv_dnn_Net_forwardAsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Net, ffi.Pointer<ffi.Char>, ffi.Pointer<AsyncArray>)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_forwardLayers(
    Net net,
    ffi.Pointer<VecMat> outputBlobs,
    VecVecChar outBlobNames,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_forwardLayers(
      net,
      outputBlobs,
      outBlobNames,
      callback,
    );
  }
